# jkbms2mqtt

./: ARCHITECTURE.md  Cargo.toml  Dockerfile  LICENSE  README.md  REQUIREMENTS.md  SECURITY.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
doc/: jkbms-protocol.md  mqtt-topics.md
src/: config.rs  lib.rs  main.rs  supervisor.rs
src/coordinator/: aggregator.rs  coordinator.rs  freeze.rs  handle.rs  mod.rs
src/coordinator/tests/: aggregator_test.rs  coordinator_test.rs  freeze_test.rs  mod.rs
src/coordinator/tests/support/: connection_mock.rs  mod.rs
src/domain/: mod.rs  snapshot.rs
src/healthcheck/: client.rs  codec.rs  mod.rs  query.rs  server.rs  socket.rs  status.rs
src/jkbms/: commands.rs  config.rs  connection.rs  connection_manager.rs  mod.rs  protocol.rs  transport.rs  types.rs
src/jkbms/tests/: connection_manager_test.rs  mod.rs  protocol_test.rs  transport_test.rs
src/jkbms/tests/fixtures/: alarm_no_active.hex  frame_01_config.hex  frame_02_operational.hex  frame_03_device_info.hex
src/jkbms/tests/support/: build_fixture.rs  mod.rs  protocol_mock.rs  transport_mock.rs  transport_opener_mock.rs
src/mqtt/: config.rs  connection.rs  connection_manager.rs  discovery.rs  events.rs  formatter.rs  inbound.rs  mod.rs  mqttc_wrapper.rs  topics.rs
src/mqtt/tests/: connection_manager_test.rs  discovery_test.rs  formatter_test.rs  inbound_test.rs  mod.rs  topics_test.rs
src/mqtt/tests/snapshots/: jkbms2mqtt__mqtt__tests__discovery_test__sensor_total_voltage.snap
src/mqtt/tests/support/: connection_mock.rs  mod.rs  (+1 more)
