[package]
name = "jkbms2mqtt"
version = "1.0.2"
edition = "2024"
rust-version = "1.85"
description = "JK-BMS wired RS485 to MQTT bridge for Home Assistant. Runs as a standalone Docker container or native binary."
license = "MIT"
repository = "https://github.com/SergYmb/jkbms2mqtt"
homepage = "https://github.com/SergYmb/jkbms2mqtt"
readme = "README.md"
keywords = ["mqtt", "bms", "home-assistant", "jkbms"]
categories = ["command-line-utilities", "hardware-support"]

[lib]
name = "jkbms2mqtt"
path = "src/lib.rs"

[[bin]]
name = "jkbms2mqtt"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "signal", "test-util"] }
tokio-util = { version = "0.7", features = ["time"] }
tokio-stream = "0.1"
tokio-serial = { version = "5", default-features = false }
rumqttc = "0.25"
serde = { version = "1", features = ["derive"] }
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
thiserror = "2"
anyhow = "1"
async-trait = "0.1"
serde_json = "1"
interprocess = { version = "2", features = ["tokio"] }

[dev-dependencies]
assert_matches = "1"
pretty_assertions = "1"
insta = { version = "1", features = ["json", "redactions"] }

[profile.release]
lto = "thin"
